clusters/cl01tl/manifests/jellystat/HTTPRoute-http-route-jellystat.yaml
---
# Source: jellystat/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-jellystat
  namespace: jellystat
  labels:
    app.kubernetes.io/name: http-route-jellystat
    app.kubernetes.io/instance: jellystat
    app.kubernetes.io/part-of: jellystat
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - jellystat.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: jellystat
          port: 80
          weight: 100
